add swagger to gateway
